--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,17 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/evoting2"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Evoting">
+        <activity
+            android:name=".hasilActivity"
+            android:exported="false" />
+        <activity
+            android:name=".VoteActivity"
+            android:exported="false" />
         <activity
             android:name=".ProfileUser_Activity"
             android:exported="false" />
